maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:34: error: not found: value sommeAngle
    var sommeAngle():Int=10
        ^PledgeMaze:35: error: not found: value sommeAngle
    while(sommeAngle!=0){
          ^PledgeMaze:36: error: not found: value sommeAngle
      sommeAngle=0
      ^PledgeMaze:39: error: not found: value sommeAngle
        sommeAngle-=1
        ^PledgeMaze:48: error: not found: value sommeAngle
            sommeAngle+=1
            ^PledgeMaze:59: error: not found: value sommeAngle
          sommeAngle+=1
          ^PledgeMaze:64: error: not found: value sommeAngle
          sommeAngle-=1
          ^