maze.pledge.PledgeMaze.scala.code
override def run() {
  
 trouverNord()
 droite()
 while(estSurBiscuit()==false){
    keepHandOnSideWall()
 }

}

def trouverNord(){
  var y:Int=getY()
	while(estFaceMur()==false){
    setDirection(Direction.NORTH)
    if(estFaceMur()==true){
      droite()
      if(estFaceMur()==true){
        gauche()
        gauche()
      }
      
      avance()
      setDirection(Direction.NORTH)
    }else{
      avance()
    }
   y=getY() 
  }   
  
}

def keepHandOnSideWall(){
		var sommeAngle():Int=10
  	while(sommeAngle!=0){
      sommeAngle=0
      if(estFaceMur()==true){
        droite()
        sommeAngle-=1
        if(estFaceMur()==true){
          gauche()
        }else{
          avance()
          gauche()
          while(estFaceMur()==false){
            avance()
            gauche()
            sommeAngle+=1
        }

        }

      }else{
        avance()
        gauche()
        while(estFaceMur()==false){
          avance()
          gauche()
          sommeAngle+=1
        }

        while(estFaceMur()==true){
          droite()
          sommeAngle-=1
        }

    }
  
    }
}